--- a/crypto_fusion_frontend/index.html
+++ b/crypto_fusion_frontend/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crypto Fusion | Your platform for seamless cryptocurrency trading</title>
-    <meta name="description" content="Crypto Fusion: Your platform for seamless cryptocurrency trading. Buy, sell, and manage your digital assets with ease and security." />
+    <meta
+      name="description"
+      content="Crypto Fusion: Your platform for seamless cryptocurrency trading. Buy, sell, and manage your digital assets with ease and security."
+    />
   </head>
   <body>
     <div id="root"></div>
